The authentication system now has:
- ✅ Comprehensive test coverage
- ⚡ Rate limiting for OTP requests
- 📚 API documentation via Swagger UI
- ✨ Clean, standards-compliant code

--- a/backend/example.env
+++ b/backend/example.env
@@ -11,3 +11,10 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=gm@flash.com
 EMAIL_HOST_PASSWORD=R3yTnD46h8Y6yP!
 EMAIL_PORT=587
+
+# SMS Gateway Settings
+KAVEH_NEGAR_API_KEY=your_api_key_here
+
+
+#
+REDIS_CACHE_HOST=127.0.0.1
